WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105335
SunSpider/date-format-tofte shouldn't compile each of the tiny worthless eval's only to OSR exit in the prologue every time
https://bugs.webkit.org/show_bug.cgi?id=105335
Summary
SunSpider/date-format-tofte shouldn't compile each of the tiny worthless eval...
Filip Pizlo
Reported
2012-12-18 12:12:16 PST
Patch forthcoming.
Attachments
the patch
(7.57 KB, patch)
2012-12-18 12:16 PST
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2012-12-18 12:16:53 PST
Created
attachment 180000
[details]
the patch
Geoffrey Garen
Comment 2
2012-12-18 12:43:23 PST
Comment on
attachment 180000
[details]
the patch r=me
Filip Pizlo
Comment 3
2012-12-18 14:50:53 PST
Landed in
http://trac.webkit.org/changeset/138074
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug